--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -57,10 +57,6 @@
                                  <font>
                                     <Font size="18.0" />
                                  </font></Label>
-                              <Button fx:id="btn1" layoutX="284.0" layoutY="449.0" mnemonicParsing="false" onAction="#display" text="Button " />
-                              <Label fx:id="lab1" layoutX="290.0" layoutY="398.0" />
-                              <Button fx:id="btn2" layoutX="281.0" layoutY="547.0" mnemonicParsing="false" text="Button" />
-                              <Button fx:id="btn21" layoutX="291.0" layoutY="557.0" mnemonicParsing="false" text="Button" />
                            </children>
                         </AnchorPane>
                      </content>
@@ -68,6 +64,8 @@
                   <AnchorPane>
                      <children>
                         <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" style="&#10;" text="Properties" textAlignment="CENTER" wrapText="false" />
+                        <Button fx:id="picGoogleBtn" layoutX="71.0" layoutY="473.0" mnemonicParsing="false" onAction="#picGoogleBtnAction" text="Get Picture from Google" />
+                        <Button fx:id="cameraBtn" layoutX="128.0" layoutY="533.0" mnemonicParsing="false" onAction="#cameraBtnAction" text="Take Picture from your camera" />
                      </children>
                   </AnchorPane>
                </items>
