--- a/src/main/resources/MainUI.fxml
+++ b/src/main/resources/MainUI.fxml
@@ -27,10 +27,6 @@
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem mnemonicParsing="false" onAction="#save" text="Save" />
                         <MenuItem mnemonicParsing="false" onAction="#saveAs" text="Save As" />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem fx:id="startServerMI" mnemonicParsing="false" onAction="#startServerAction" text="Start Authertication Server" />
-                  <MenuItem fx:id="loginMI" mnemonicParsing="false" onAction="#loginAction" text="Login" />
-                  <MenuItem fx:id="adminMI" mnemonicParsing="false" onAction="#adminMIAction" text="Admin" />
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem mnemonicParsing="false" onAction="#quit" text="Quit" />
                     </items>
@@ -44,6 +40,12 @@
                         <MenuItem mnemonicParsing="false" text="Copy" />
                         <MenuItem mnemonicParsing="false" text="Paste" />
                         <MenuItem mnemonicParsing="false" text="Delete" />
+                    </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Members">
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#loginAction" text="Sign In/Register" />
+                        <MenuItem mnemonicParsing="false" text="VIP Member" onAction="#adminMIAction" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
